--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <header class="video-header">
-  <video src="Video.mp4" autoplay loop playsinline muted></video>
+  <video src="accueil/Video.mp4" autoplay loop playsinline muted></video>
   <div class="enhaut">
     <img class="logods"
-     src="Logo.png"
+     src="accueil/Logo.png"
      alt="Bienvenue sur notre site.">
       <h1>DS AUTOMOBILES</h1> 
         <div id="menu"> 
-            <a href="../lien/lien.html">Modèles DS</a> <a href="../lien/lien.html">Electrique & Hybride</a> <a href="../lien/lien.html">Professionnel</a> <a href="../lien/lien.html">Marque DS</a> <a href="../lien/lien.html">Entretiens et Services</a> <a href="../lien/lien.html">Achetez</a> 
+            <a href="lien/lien.html">Modèles DS</a> <a href="lien/lien.html">Electrique & Hybride</a> <a href="lien/lien.html">Professionnel</a> <a href="lien/lien.html">Marque DS</a> <a href="lien/lien.html">Entretiens et Services</a> <a href="lien/lien.html">Achetez</a> 
         </div>
   </div>
 </header>
@@ -35,8 +35,8 @@
 
       <div id="essai">
         <div class="colonne">
-          <a href="../lien/lien.html">   
-            <img src="image1.jpg" class=hover>
+          <a href="lien/lien.html">   
+            <img src="accueil/image1.jpg" class=hover>
             <p class="lien_essai">Réservez votre essai</p>
           </a>
         </div>
@@ -44,8 +44,8 @@
 
       <div id="configurer">
         <div class="colonne">
-            <a href="../lien/lien.html">
-              <img src="avant.jpg" class="hover">
+            <a href="lien/lien.html">
+              <img src="accueil/avant.jpg" class="hover">
               <p class="lien_configurer">Configurez votre modèle</p>
             </a>
         </div>
@@ -54,38 +54,38 @@
 
 
         <div class="troisieme">
-          <img src="interieur.jpg">
+          <img src="accueil/interieur.jpg">
         </div>
 
     <p>L'intérieur de DS9 allie confort, élégance et utilité.</p>
 
 <div id="reseaux">
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="twitter.png" width="45"> </a>
-<a href="../lien/lien.html"> <img src="fb.png" width="40"> </a>
-<a href="../lien/lien.html"> <img src="insta.png" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
-<a href="../lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="twitter.png" width="45"> </a>
+<a href="lien/lien.html"> <img src="fb.png" width="40"> </a>
+<a href="lien/lien.html"> <img src="insta.png" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
+<a href="lien/lien.html"> <img src="" width="40"> </a>
 </div>
 
     <br>
     <br>
     <br>
     
-       <embed src="november.mp3" autostart="true" hidden="true">
+       <embed src="accueil/november.mp3" autostart="true" hidden="true">
    </embed>
 
     <div class="enbas">
     <img class="logods"
-     src="Logo.png"
+     src="accueil/Logo.png"
      alt="Bienvenue sur notre site.">
         <div id="menu"> 
-            <a href="../lien/lien.html">Contactez-nous</a> <a href="../lien/lien.html">Conditions de vente et d'utilisation</a> <a href="../lien/lien.html">Mentions légales</a>
+            <a href="lien/lien.html">Contactez-nous</a> <a href="lien/lien.html">Conditions de vente et d'utilisation</a> <a href="lien/lien.html">Mentions légales</a>
         </div>
   </div>
 
