--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="video-header">
-  <video src="/accueil/Video.mp4" autoplay loop playsinline muted></video>
+  <video src="accueil/Video.mp4" autoplay loop playsinline muted></video>
   <div class="enhaut">
     <img class="logods"
      src="accueil/Logo.png"
