--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Site DS revisité</title>
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
 <header class="video-header">
-  <video src="/accueil/Video.mp4" autoplay loop playsinline muted></video>
+  <video src="accueil/Video.mp4" autoplay loop playsinline muted></video>
   <div class="enhaut">
     <img class="logods"
-     src="/accueil/Logo.png"
+     src="accueil/Logo.png"
      alt="Bienvenue sur notre site.">
       <h1>DS AUTOMOBILES</h1> 
         <div id="menu"> 
@@ -36,7 +36,7 @@
       <div id="essai">
         <div class="colonne">
           <a href="lien/lien.html">   
-            <img src="/accueil/image1.jpg" class=hover>
+            <img src="accueil/image1.jpg" class=hover>
             <p class="lien_essai">Réservez votre essai</p>
           </a>
         </div>
@@ -82,7 +82,7 @@
 
     <div class="enbas">
     <img class="logods"
-     src="/accueil/Logo.png"
+     src="accueil/Logo.png"
      alt="Bienvenue sur notre site.">
         <div id="menu"> 
             <a href="lien/lien.html">Contactez-nous</a> <a href="lien/lien.html">Conditions de vente et d'utilisation</a> <a href="lien/lien.html">Mentions légales</a>
