--- a/lien/lien.html
+++ b/lien/lien.html
@@ -25,7 +25,7 @@
   <h1> RIEN A VOIR ICI </h1>
   <h1> REVENEZ PLUS TARD </h1>
 
-<a href="../accueil/index.html">
+<a href="../index.html">
 <marquee behavior="alternate" scrollamount="10">
 <img src="ballon.png" width="60" alt="booooooh">
 </marquee>
